# notebooklm-auto

./: .gitignore  README.md  config.yaml  note_article_draft.md  preview_server.py  pyproject.toml
input/: urls.txt
src/notebooklm_auto/: __init__.py  __main__.py  config.py  input_parser.py  main.py  models.py  output_writer.py  processor.py  web.py
src/notebooklm_auto/templates/: index.html
